--- a/app/src/main/res/layout/activity_ciclos.xml
+++ b/app/src/main/res/layout/activity_ciclos.xml
@@ -6,184 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".Ciclos">
 
-    <ImageView
-        android:id="@+id/ciclo5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:adjustViewBounds="false"
-        android:alpha="0.7"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ciclo4"
-        app:srcCompat="@drawable/q0" />
 
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:adjustViewBounds="true"
-        android:alpha="0.7"
-        android:background="@color/transparente"
-        app:layout_constraintBottom_toBottomOf="@+id/ciclo5"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ciclo5"
-        app:srcCompat="@drawable/q1" />
-
-    <TextView
-        android:id="@+id/min7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:alpha="0.7"
-        android:text="Esportes aquáticos"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/ciclo5"
-        app:layout_constraintStart_toEndOf="@+id/ciclo5"
-        app:layout_constraintTop_toTopOf="@+id/ciclo5"
-        app:layout_constraintVertical_bias="0.368" />
-
-    <TextView
-        android:id="@+id/min8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:alpha="0.7"
-        android:text="60 min"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/min7"
-        app:layout_constraintStart_toEndOf="@+id/min7"
-        app:layout_constraintTop_toTopOf="@+id/min7" />
-
-    <ImageView
-        android:id="@+id/ciclo4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:adjustViewBounds="false"
-        android:alpha="0.7"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ciclo3"
-        app:srcCompat="@drawable/q2" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:alpha="0.7"
-        android:background="@color/transparente"
-        app:layout_constraintBottom_toBottomOf="@+id/ciclo4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ciclo4"
-        app:srcCompat="@drawable/q3" />
-
-    <TextView
-        android:id="@+id/min5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:alpha="0.7"
-        android:text="Pouca Água"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/ciclo4"
-        app:layout_constraintStart_toEndOf="@+id/ciclo4"
-        app:layout_constraintTop_toTopOf="@+id/ciclo4" />
-
-    <TextView
-        android:id="@+id/min6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:alpha="0.7"
-        android:text="40 min"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/min5"
-        app:layout_constraintStart_toEndOf="@+id/min5"
-        app:layout_constraintTop_toTopOf="@+id/min5" />
-
-    <TextView
-        android:id="@+id/min4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:alpha="0.7"
-        android:text="60 min"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/min3"
-        app:layout_constraintStart_toEndOf="@+id/min3"
-        app:layout_constraintTop_toTopOf="@+id/min3" />
-
-    <TextView
-        android:id="@+id/min3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:alpha="0.7"
-        android:text="Econômico"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/ciclo3"
-        app:layout_constraintStart_toEndOf="@+id/ciclo3"
-        app:layout_constraintTop_toTopOf="@+id/ciclo3" />
-
-    <ImageView
-        android:id="@+id/ciclo3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:adjustViewBounds="false"
-        android:alpha="0.7"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/side_nav_bar" />
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:alpha="0.7"
-        android:background="@color/transparente"
-        app:layout_constraintBottom_toBottomOf="@+id/ciclo3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ciclo3"
-        app:srcCompat="@drawable/q5" />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
