--- a/app/src/main/res/layout/activity_novo_ciclo.xml
+++ b/app/src/main/res/layout/activity_novo_ciclo.xml
@@ -74,7 +74,7 @@
                 android:layout_width="114dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Dia-a-dia"
+                android:text="Dia a dia"
                 android:textColor="@color/preto70"
                 android:textSize="14sp" />
 
