--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -78,11 +78,16 @@
         <TextView
             android:id="@+id/tempo"
             android:layout_width="wrap_content"
-            android:layout_height="105dp"
-            android:layout_marginBottom="24dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:text="1:60"
             android:textColor="@color/preto60"
-            android:textSize="90sp"
+            android:textSize="85sp"
             android:textStyle="normal"
             android:typeface="monospace"
             app:fontFamily="@font/roboto_thin"
@@ -102,6 +107,7 @@
             android:text="min"
             android:textColor="@color/preto70"
             android:textSize="30sp"
+            android:visibility="gone"
             app:fontFamily="@font/roboto_light"
             app:layout_constraintEnd_toEndOf="@+id/tempo"
             app:layout_constraintStart_toStartOf="@+id/tempo"
@@ -126,13 +132,14 @@
         <Button
             android:id="@+id/iniciar"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="57dp"
+            android:layout_width="99dp"
+            android:layout_height="48dp"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:background="@drawable/button"
             android:text="Iniciar"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
