--- a/app/src/main/res/anim/rgclose.xml
+++ b/app/src/main/res/anim/rgclose.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <scale
+    <translate
+
+        android:fromYDelta="0%"
+        android:toYDelta="-100%"
         android:duration = "195"
-        android:fromXScale = "1"
-        android:toXScale = "0.0"
-        android:interpolator = "@android:anim/linear_interpolator"
-        android:pivotX= "50%"
-        />
+        android:interpolator = "@android:anim/linear_interpolator"/>
+    <alpha
+        android:fromAlpha="1"
+        android:toAlpha="0"
+        android:duration ="150"/>
 </set>
