--- a/app/src/main/res/layout/activity_consumo.xml
+++ b/app/src/main/res/layout/activity_consumo.xml
@@ -6,180 +6,52 @@
     android:layout_height="match_parent"
     tools:context=".Consumo">
 
-    <TextView
-        android:id="@+id/textView14"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:alpha="0.7"
-        android:text="Água  1923 L"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/bDia2"
-        app:layout_constraintTop_toBottomOf="@+id/textociclo3" />
-
-    <TextView
-        android:id="@+id/textociclo4"
-        android:layout_width="wrap_content"
-        android:layout_height="26dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="116dp"
-        android:text="1           5           10           15           20           30"
-        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textociclo3"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="24dp"
-        android:layout_height="98dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/button9"
-        app:layout_constraintStart_toStartOf="@+id/button2" />
-
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="24dp"
-        android:layout_height="82dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toTopOf="@+id/textociclo4"
-        app:layout_constraintStart_toStartOf="@+id/button3" />
-
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="24dp"
-        android:layout_height="82dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/button9"
-        app:layout_constraintStart_toStartOf="@+id/button4" />
-
-    <Button
-        android:id="@+id/button11"
-        android:layout_width="24dp"
-        android:layout_height="42dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/button9"
-        app:layout_constraintStart_toStartOf="@+id/button5" />
-
-    <Button
-        android:id="@+id/button12"
-        android:layout_width="24dp"
-        android:layout_height="51dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/button9"
-        app:layout_constraintStart_toStartOf="@+id/button6" />
-
-    <Button
-        android:id="@+id/button13"
-        android:layout_width="24dp"
-        android:layout_height="72dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/button9"
-        app:layout_constraintStart_toStartOf="@+id/button7" />
-
-    <TextView
-        android:id="@+id/textociclo3"
-        android:layout_width="wrap_content"
-        android:layout_height="26dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="124dp"
-        android:text="1           5           10           15           20           30"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        app:srcCompat="@drawable/graph0"
+        tools:layout_editor_absoluteY="340dp" />
 
-    <TextView
-        android:id="@+id/textView13"
+    <ImageView
+        android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:alpha="0.7"
-        android:text="Luz  1,08 KWh"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/bDia2"
-        app:layout_constraintTop_toBottomOf="@+id/bDia2" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/graph1"
+        tools:layout_editor_absoluteY="115dp" />
 
-    <Button
-        android:id="@+id/bDia2"
-        style="@style/Widget.AppCompat.Button.Borderless"
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:entries="@array/time_graph"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:background="@android:color/transparent"
-        android:text="Últimos 30 dias"
-        android:textColor="@color/colorPrimary"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        android:text="Luz"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="24dp"
-        android:layout_height="111dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/button3"
-        app:layout_constraintStart_toEndOf="@+id/button3" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="24dp"
-        android:layout_height="47dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginStart="48dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/button3"
-        app:layout_constraintStart_toEndOf="@+id/button2" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="24dp"
-        android:layout_height="103dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginStart="48dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/button3"
-        app:layout_constraintStart_toEndOf="@+id/button4" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="24dp"
-        android:layout_height="76dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/button3"
-        app:layout_constraintStart_toEndOf="@+id/button5" />
-
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="24dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginStart="44dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/button3"
-        app:layout_constraintStart_toEndOf="@+id/button6" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="24dp"
-        android:layout_height="97dp"
-        android:background="@color/colorAccent"
-        android:editable="true"
-        app:layout_constraintBottom_toTopOf="@+id/textociclo3"
-        app:layout_constraintStart_toStartOf="@+id/textociclo3" />
-
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="27"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="282dp" />
 </android.support.constraint.ConstraintLayout>
