--- a/app/src/main/res/layout/activity_manutencao.xml
+++ b/app/src/main/res/layout/activity_manutencao.xml
@@ -9,14 +9,15 @@
     <Button
         android:id="@+id/assistencia"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="57dp"
+        android:layout_width="123dp"
+        android:layout_height="48dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:text="Solicitar assistência técnica"
+        android:background="@drawable/button"
+        android:text="Solicitar"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
