--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,60 +20,60 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/FABnovociclo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:clickable="true"
-            android:tint="@android:color/background_light"
-            app:backgroundTint="@color/colorPrimaryDark"
-            app:elevation="0dp"
-            app:fabSize="normal"
-            app:layout_constraintBottom_toBottomOf="@+id/barraprogresso"
-            app:layout_constraintEnd_toEndOf="@+id/barraprogresso"
-            app:layout_constraintTop_toBottomOf="@+id/barraprogresso"
-            app:srcCompat="@drawable/ic_add_black_48dp" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/FABnovociclo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:clickable="true"
+        android:tint="@android:color/background_light"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:elevation="0dp"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toTopOf="@+id/FABagendar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_add_black_48dp" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/FABagendar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:clickable="true"
-            android:tint="@android:color/background_light"
-            app:backgroundTint="@color/colorPrimaryDark"
-            app:elevation="0dp"
-            app:fabSize="normal"
-            app:layout_constraintBottom_toBottomOf="@+id/barraprogresso"
-            app:layout_constraintStart_toStartOf="@+id/barraprogresso"
-            app:layout_constraintTop_toBottomOf="@+id/barraprogresso"
-            app:srcCompat="@drawable/ic_alarm_add_black_48dp" />
 
-        <ProgressBar
-            android:id="@+id/barraprogresso"
-            style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_width="288dp"
-            android:layout_height="299dp"
-            android:layout_marginBottom="24dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/circle"
-            android:indeterminate="false"
-            android:max="1000"
-            android:progressDrawable="@drawable/progress_bar"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/iniciar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.511"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textociclo"
-            tools:visibility="visible" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/FABagendar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:clickable="true"
+        android:tint="@android:color/background_light"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:elevation="0dp"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_alarm_add_black_48dp" />
+
+    <ProgressBar
+        android:id="@+id/barraprogresso"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="299dp"
+        android:layout_height="299dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/circle"
+        android:indeterminate="false"
+        android:max="1000"
+        android:progressDrawable="@drawable/progress_bar"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/iniciar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textociclo"
+        tools:visibility="visible" />
 
         <TextView
             android:id="@+id/tempo"
@@ -129,22 +129,39 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/carousel" />
 
-        <Button
-            android:id="@+id/iniciar"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="99dp"
-            android:layout_height="48dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/button"
-            android:text="Iniciar"
-            android:textColor="@android:color/background_light"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/iniciar"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="99dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/button"
+        android:text="Iniciar"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/wifiOff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:tint="@color/vermelho"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/barraprogresso"
+        app:layout_constraintEnd_toEndOf="@+id/barraprogresso"
+        app:layout_constraintStart_toStartOf="@+id/barraprogresso"
+        app:srcCompat="@drawable/outline_wifi_off_black_48dp" />
 
 </android.support.constraint.ConstraintLayout>
