--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -5,7 +5,7 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="0dp"
         android:clickable="true"
         android:focusable="true"
         app:cardCornerRadius="1dp"
@@ -42,6 +42,20 @@
             android:text="1:30"
             android:textSize= "14dp"
              />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@color/transparente"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="8dp"
+            android:alpha="0.7"
+            app:srcCompat="@drawable/outline_delete_black_18dp" />
+
+
+
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
