Network Connection indicator

--- a/app/src/main/res/layout/activity_limpeza.xml
+++ b/app/src/main/res/layout/activity_limpeza.xml
@@ -10,175 +10,104 @@
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:alpha="0.7"
-        android:text="Feche o tambor"
+        android:text="3 . Feche o tambor"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/bDia5"
-        app:layout_constraintStart_toEndOf="@+id/bDia5" />
-
-    <Button
-        android:id="@+id/bDia5"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="30dp"
-        android:layout_height="32dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:background="@android:color/transparent"
-        android:text="3."
-        android:textColor="@color/colorPrimary"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/textView16"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="281dp"
+        android:layout_width="351dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:alpha="0.7"
         android:singleLine="false"
-        android:text="Adicione 20ml de produto de limpeza no tambor"
+        android:text="2 . Adicione 20ml de produto de limpeza no tambor"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/bDia4"
-        app:layout_constraintStart_toEndOf="@+id/bDia4" />
-
-    <Button
-        android:id="@+id/bDia4"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="30dp"
-        android:layout_height="32dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:background="@android:color/transparent"
-        android:text="2."
-        android:textColor="@color/colorPrimary"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/textView15"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <TextView
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
         android:alpha="0.7"
-        android:text="Verifique se o tambor está vazio"
+        android:text="1 . Verifique se o tambor está vazio"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/bDia3"
-        app:layout_constraintStart_toEndOf="@+id/bDia3" />
-
-    <Button
-        android:id="@+id/bDia3"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="30dp"
-        android:layout_height="32dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:background="@android:color/transparent"
-        android:text="1."
-        android:textColor="@color/colorPrimary"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/iniciar2"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
+        android:layout_width="107dp"
         android:layout_height="57dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:text="Iniciar"
         android:background="@drawable/button"
+        android:text="Iniciar"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <View
-        android:id="@+id/circulo2"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:alpha="1"
-        android:background="@drawable/circle"
-        app:layout_constraintBottom_toTopOf="@+id/iniciar2"
-        app:layout_constraintEnd_toEndOf="@+id/barraprogresso2"
-        app:layout_constraintStart_toStartOf="@+id/barraprogresso2"
-        app:layout_constraintTop_toBottomOf="@+id/bDia5" />
 
     <ProgressBar
         android:id="@+id/barraprogresso2"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="248dp"
-        android:layout_height="239dp"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="249dp"
+        android:layout_height="249dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/circle"
         android:indeterminate="false"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/circulo2"
+        android:max="1000"
+        android:progressDrawable="@drawable/progress_bar"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/iniciar2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/circulo2"
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/tempo2"
-        android:layout_width="wrap_content"
-        android:layout_height="136dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="99dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:alpha="0.7"
         android:text="15"
-        android:textColor="@android:color/black"
-        android:textSize="100sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/circulo2"
-        app:layout_constraintEnd_toEndOf="@+id/circulo2"
+        android:textColor="@color/preto60"
+        android:textSize="80sp"
+        android:textStyle="normal"
+        android:typeface="monospace"
+        app:fontFamily="@font/roboto_thin"
+        app:layout_constraintBottom_toBottomOf="@+id/barraprogresso2"
+        app:layout_constraintEnd_toEndOf="@+id/barraprogresso2"
         app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="@+id/circulo2" />
+        app:layout_constraintStart_toStartOf="@+id/barraprogresso2"
+        app:layout_constraintTop_toTopOf="@+id/barraprogresso2" />
 
-    <TextView
-        android:id="@+id/min2"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:alpha="0.7"
-        android:text="min"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/circulo2"
-        app:layout_constraintEnd_toEndOf="@+id/circulo2"
-        app:layout_constraintStart_toStartOf="@+id/circulo2" />
 </android.support.constraint.ConstraintLayout>
