--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,23 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-        <in.goodiebag.carouselpicker.CarouselPicker
+    <ImageView
+        android:id="@+id/icone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="21dp"
+        android:alpha="0.7"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/p0" />
+
+    <in.goodiebag.carouselpicker.CarouselPicker
             android:id="@+id/carousel"
             android:alpha = "0.7"
             android:layout_width="match_parent"
@@ -18,7 +34,9 @@
             app:items_visible="three"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" >
+
+    </in.goodiebag.carouselpicker.CarouselPicker>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/FABnovociclo"
